# heventsourced

./: .travis.yml  README.md  heventsourced.cabal  stack.yaml
erp/: erp.cabal
erp/src/: CmdOptions.hs  CommandLineParser.hs  Erp.hs  Main.hs
erp/src/Erp/: Commons.hs  World.hs
erp/test/: Spec.hs
mongo/: heventsourced-mongo.cabal
mongo/src/EventSourcing/: Mongo.hs
mongo/src/EventSourcing/Mongo/: MongoEventPersistor.hs
src/: EventSourcing.hs
src/EventSourcing/: Aggregate.hs  DummyStateManager.hs  InMemoryEventPersistor.hs  Spi.hs
