name:                erp
version:             0.1.0.0
synopsis:            Example ERP using heventsourced
description:         Heventsourced is a haskell implementation of the Event Sourcing architectural pattern.
                     .
                     Event Sourcing is an architectural pattern that force to store the application state as a sequence of events.
                     .
                     This package provides an ERP example based on heventsourced
homepage:            https://github.com/frincon/heventsourced#readme
bug-reports:         https://github.com/frincon/heventsourced/issues
license:             Apache-2.0
license-file:        LICENSE.txt
author:              Fernando Rincon
maintainer:          Fernando Rincon <frm.rincon@gmail.com>
copyright:           Copyright (c) 2016 Fernando Rincon
build-type:          Simple
cabal-version:       >=1.10

executable erp
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Erp
                     , Erp.Commons
                     , Erp.World
                     , CmdOptions
                     , CommandLineParser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , heventsourced
                     , heventsourced-mongo
                     , split
                     , uuid
                     , containers
                     , mongoDB
                     , placeholders
                     , text
                     , mtl
                     , transformers
                     , optparse-applicative
  default-language:    Haskell2010

test-suite erp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , heventsourced
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/heventsourced
  subdir:   erp
